# RemoteGenerationService

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup_windows.bat  start_windows.bat
app/: config.py  database.py  main.py
app/core/: events.py  job_queue.py
app/models/: job.py  settings.py
app/routers/: files.py  jobs.py  settings.py  ui.py
app/routers/mock/: chat.py  images.py  video.py
app/routers/real/: comfyui.py  image.py  video.py
app/schemas/: job.py  openai_compat.py  settings.py
app/services/: job_service.py  transfer_service.py
app/services/mock/: chat_service.py  image_service.py  video_service.py
app/services/real/: comfyui_service.py
app/templates/: base.html  dashboard.html
app/templates/generate/: image.html  llm.html  video.html
app/templates/jobs/: detail.html  list.html
app/templates/settings/: general.html  mock.html  models.html  transfer.html
static/css/: app.css
static/js/: app.js
tests/: conftest.py  test_mock_chat.py
