[project]
name = "remote-generation-service"
version = "1.0.0"
description = "A local AI generation service with mock API and ComfyUI integration"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
